Add CSS variables test

--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -29,7 +29,7 @@ $breadcrumb-item-separator-color: var(--border-hover, #{$border-hover}) !default
     justify-content: center
     padding: var(--breadcrumb-item-padding-vertical) var(--breadcrumb-item-padding-horizontal)
     &:hover
-      color: var(--breadcrumb-item-hover-color)
+      --breadcrumb-item-color: var(--breadcrumb-item-hover-color)
   li
     align-items: center
     display: flex
@@ -37,7 +37,7 @@ $breadcrumb-item-separator-color: var(--border-hover, #{$border-hover}) !default
       +ltr-property("padding", 0, false)
     &.is-active
       a
-        color: var(--breadcrumb-item-active-color)
+        --breadcrumb-item-color: var(--breadcrumb-item-active-color)
         cursor: default
         pointer-events: none
     & + li::before
