--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -84,7 +84,7 @@ button.dropdown-item
   text-align: inherit
   white-space: nowrap
   width: 100%
-  &:hover
+  &:hover:not(.is-active)
     background-color: var(--dropdown-item-hover-background-color)
     color: var(--dropdown-item-hover-color)
   &.is-active
