--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -2,11 +2,12 @@ $level-item-spacing: calc(var(--block-spacing, #{$block-spacing}) / 2) !default
 
 .level
   --level-item-spacing: #{$level-item-spacing}
+
   @extend %block
   align-items: center
   justify-content: space-between
   code
-    border-radius: $radius
+    border-radius: var(--radius, #{$radius})
   img
     display: inline-block
     vertical-align: top
