--- a/sass/components/media.sass
+++ b/sass/components/media.sass
@@ -30,7 +30,8 @@ $media-spacing-large: 1.5rem
   // Sizes
   &.is-large
     & + .media
-      --media-spacing: var(--media-spacing-large)
+      margin-top: var(--media-spacing-large)
+      padding-top: var(--media-spacing-large)
 
 .media-left,
 .media-right
