--- a/sass/components/menu.sass
+++ b/sass/components/menu.sass
@@ -19,7 +19,7 @@ $menu-label-letter-spacing: 0.1em !default
 $menu-label-spacing: 1em !default
 
 .menu
-  --menu-font-size: #{$content-font-size}
+  --menu-font-size: #{$menu-font-size}
   --menu-list-line-height: #{$menu-list-line-height}
   --menu-item-radius: #{$menu-item-radius}
   --menu-item-color: #{$menu-item-color}
