--- a/sass/themes/default.sass
+++ b/sass/themes/default.sass
@@ -112,3 +112,10 @@
   --link-focus-border: #{$link-focus-border}
   --link-active: #{$link-active}
   --link-active-border: #{$link-active-border}
+  --family-primary: #{$family-primary}
+  --family-secondary: #{$family-secondary}
+  --family-code: #{$family-code}
+  --size-small: #{$size-small}
+  --size-normal: #{$size-normal}
+  --size-medium: #{$size-medium}
+  --size-large: #{$size-large}
