Check if assigned CSS vars are actually used

--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -57,7 +57,7 @@ $panel-colors: $colors !default
 
   border-radius: var(--panel-radius)
   box-shadow: var(--panel-shadow)
-  font-size: $size-normal
+  font-size: var(--panel-font-size)
   &:not(:last-child)
     margin-bottom: var(--panel-margin)
   // Colors
