Add CSS variables to form controls

--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -68,9 +68,9 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($scheme-invert, 0.2)
     .pagination-next
       padding-left: 1em
       padding-right: 1em
-      border-radius: var(--radius-rounded)
+      border-radius: var(--radius-rounded, #{$radius-rounded})
     .pagination-link
-      border-radius: var(--radius-rounded)
+      border-radius: var(--radius-rounded, #{$radius-rounded})
 
 .pagination,
 .pagination-list
