--- a/sass/form/checkbox-radio.sass
+++ b/sass/form/checkbox-radio.sass
@@ -1,4 +1,7 @@
 %checkbox-radio
+  --checkbox-radio-hover-color: #{$input-hover-color}
+  --checkbox-radio-disabled-color: #{$input-disabled-color}
+
   cursor: pointer
   display: inline-block
   line-height: 1.25
@@ -6,10 +9,10 @@
   input
     cursor: pointer
   &:hover
-    color: $input-hover-color
+    color: var(--checkbox-radio-hover-color)
   &[disabled],
   fieldset[disabled] &
-    color: $input-disabled-color
+    color: var(--checkbox-radio-disabled-color)
     cursor: not-allowed
 
 .checkbox
