--- a/sass/themes/default.sass
+++ b/sass/themes/default.sass
@@ -119,3 +119,11 @@
   --size-normal: #{$size-normal}
   --size-medium: #{$size-medium}
   --size-large: #{$size-large}
+  // Controls
+  --control-radius: #{$control-radius}
+  --control-radius-small: #{$control-radius-small}
+  --control-border-width: #{$control-border-width}
+  --control-height: #{$control-height}
+  --control-line-height: #{$control-line-height}
+  --control-padding-vertical: #{$control-padding-vertical}
+  --control-padding-horizontal: #{$control-padding-horizontal}
