Get default assignments automatically

--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -182,7 +182,7 @@ $control-font-size: var(--size-normal, #{$size-normal}) !default
     .select
       &:focus
         & ~ .icon
-          color: $input-icon-active-color
+          color: var(--input-icon-active-color)
       &.is-small ~ .icon
         font-size: var(--size-small, #{$size-small})
       &.is-medium ~ .icon
@@ -190,23 +190,23 @@ $control-font-size: var(--size-normal, #{$size-normal}) !default
       &.is-large ~ .icon
         font-size: var(--size-large, #{$size-large})
     .icon
-      color: $input-icon-color
-      height: $input-height
+      color: var(--input-icon-color)
+      height: var(--input-height)
       pointer-events: none
       position: absolute
       top: 0
-      width: $input-height
+      width: var(--input-height)
       z-index: 4
   &.has-icons-left
     .input,
     .select select
-      padding-left: $input-height
+      padding-left: var(--input-height)
     .icon.is-left
       left: 0
   &.has-icons-right
     .input,
     .select select
-      padding-right: $input-height
+      padding-right: var(--input-height)
     .icon.is-right
       right: 0
   &.is-loading
