--- a/sass/themes/default.sass
+++ b/sass/themes/default.sass
@@ -120,6 +120,7 @@
   --size-medium: #{$size-medium}
   --size-large: #{$size-large}
   // Controls
+  --control-font-size: #{$control-font-size}
   --control-radius: #{$control-radius}
   --control-radius-small: #{$control-radius-small}
   --control-border-width: #{$control-border-width}
