--- a/sass/helpers/typography.sass
+++ b/sass/helpers/typography.sass
@@ -72,27 +72,31 @@ $alignments: ('centered': 'center', 'justified': 'justify', 'left': 'left', 'rig
   font-style: italic !important
 
 .has-text-weight-light
-  font-weight: $weight-light !important
+  font-weight: var(--weight-light, #{$weight-light}) !important
+
 .has-text-weight-normal
-  font-weight: $weight-normal !important
+  font-weight: var(--weight-normal, #{$weight-normal}) !important
+
 .has-text-weight-medium
-  font-weight: $weight-medium !important
+  font-weight: var(--weight-medium, #{$weight-medium}) !important
+
 .has-text-weight-semibold
-  font-weight: $weight-semibold !important
+  font-weight: var(--weight-semibold, #{$weight-semibold}) !important
+
 .has-text-weight-bold
-  font-weight: $weight-bold !important
+  font-weight: var(--weight-bold, #{$weight-bold}) !important
 
 .is-family-primary
-  font-family: $family-primary !important
+  font-family: var(--family-primary, #{$family-primary}) !important
 
 .is-family-secondary
-  font-family: $family-secondary !important
+  font-family: var(--family-secondary, #{$family-secondary}) !important
 
 .is-family-sans-serif
-  font-family: $family-sans-serif !important
+  font-family: var(--family-sans-serif, #{$family-sans-serif}) !important
 
 .is-family-monospace
-  font-family: $family-monospace !important
+  font-family: var(--family-monospace, #{$family-monospace}) !important
 
 .is-family-code
-  font-family: $family-code !important
+  font-family: var(--family-code, #{$family-code}) !important
