--- a/sass/utilities/derived-variables.scss
+++ b/sass/utilities/derived-variables.scss
@@ -98,10 +98,10 @@ $family-primary  : var(--family-sans-serif, #{$family-sans-serif}) !default;
 $family-secondary: var(--family-sans-serif, #{$family-sans-serif}) !default;
 $family-code     : var(--family-monospace, #{$family-monospace}) !default;
 
-$size-small : $size-7 !default;
-$size-normal: $size-6 !default;
-$size-medium: $size-5 !default;
-$size-large : $size-4 !default;
+$size-small : var(--size-7, #{size-7}) !default;
+$size-normal: var(--size-6, #{size-6}) !default;
+$size-medium: var(--size-5, #{size-5}) !default;
+$size-large : var(--size-4, #{size-4}) !default;
 
 // Lists and maps
 $custom-colors: null !default;
