--- a/sass/layout/section.sass
+++ b/sass/layout/section.sass
@@ -3,11 +3,15 @@ $section-padding-medium: 9rem 1.5rem !default
 $section-padding-large: 18rem 1.5rem !default
 
 .section
-  padding: $section-padding
+  --section-padding: #{$section-padding}
+  --section-padding-medium: #{$section-padding-medium}
+  --section-padding-large: #{$section-padding-large}
+
+  padding: var(--section-padding)
   // Responsiveness
   +desktop
     // Sizes
     &.is-medium
-      padding: $section-padding-medium
+      --section-padding: var(--section-padding-medium)
     &.is-large
-      padding: $section-padding-large
+      --section-padding: var(--section-padding-large)
